--- a/android/build.gradle
+++ b/android/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.cielo.lio:order-manager:1.4.0'
     implementation 'org.jetbrains:annotations:15.0'
+    implementation 'com.google.zxing:core:3.5.1'
+    implementation 'com.google.zxing:javase:3.5.1'
 }
